# Live2d-desktop-waifu

./: .gitignore  CMakeLists.txt  README.md
src/: AutoStartManager.cpp  AutoStartManager.hpp  ChatWindow.cpp  ChatWindow.hpp  ContextMenu.cpp  ContextMenu.hpp  ImGuiBubble.cpp  ImGuiBubble.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppSpriteShader.cpp  LAppView.cpp  LAppView.hpp  OllamaClient.cpp  OllamaClient.hpp  PlatformUtils.cpp  PlatformUtils.hpp  PromptManager.cpp  PromptManager.hpp  RandomTalker.cpp  RandomTalker.hpp  StringUtils.cpp  StringUtils.hpp  TTSClient.cpp  TTSClient.hpp  main.cpp
